--- a/notebooks/feature_backfill.ipynb
+++ b/notebooks/feature_backfill.ipynb
@@ -63,7 +63,7 @@
    "id": "90bf26c1",
    "metadata": {},
    "source": [
-    "## Fetch NOAA GML Global monthly mean CO₂ 🌫️\n",
+    "## 🌫️ Fetch NOAA GML Global monthly mean CO₂\n",
     "\n",
     "We use NOAA GML's public text file for **Global monthly mean CO₂** and parse it into a clean Pandas DataFrame.\n",
     "\n",
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "bedd0b35",
    "metadata": {},
    "outputs": [
@@ -794,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "de85085e",
    "metadata": {},
    "outputs": [
@@ -1206,7 +1206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "566675a5",
    "metadata": {},
    "outputs": [
