--- a/notebooks/batch_inference.ipynb
+++ b/notebooks/batch_inference.ipynb
@@ -1149,7 +1149,7 @@
     "    year_month_sin = year_norm * month_sin\n",
     "    year_month_cos = year_norm * month_cos\n",
     "    \n",
-    "    # 1. Predict trend part\n",
+    "    # Predict trend part\n",
     "    trend_row = pd.DataFrame([{\n",
     "        'year_normalized': year_norm,\n",
     "        'year_normalized_squared': year_norm_sq,\n",
@@ -1160,13 +1160,13 @@
     "    }])\n",
     "    trend_pred = float(trend_model.predict(trend_row[trend_features])[0])\n",
     "    \n",
-    "    # 2. Build residual features from historical data\n",
+    "    # Build residual features from historical data\n",
     "    resid_feats = make_co2_residual_features_from_history(historical_average, historical_trend)\n",
-    "    # 3. Predict residual part\n",
+    "    # Predict residual part\n",
     "    resid_row_df = pd.DataFrame([resid_feats])\n",
     "    residual_pred = float(residual_model_gb.predict(resid_row_df)[0])\n",
     "    \n",
-    "    # 4. Combine trend + residual + bias correction\n",
+    "    # Combine trend + residual + bias correction\n",
     "    co2_pred = trend_pred + residual_pred + bias_correction\n",
     "    \n",
     "    predictions.append({\n",
@@ -1187,7 +1187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "ebbcc51c",
    "metadata": {},
    "outputs": [
@@ -1203,7 +1203,7 @@
     }
    ],
    "source": [
-    "# Plot CO₂ predictions (forecast only, no historical data)\n",
+    "# Plot CO2 predictions (forecast only, no historical data)\n",
     "\n",
     "# Prepare data for plotting\n",
     "predictions_df['date'] = pd.to_datetime(predictions_df['date'])\n",
@@ -1498,7 +1498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "2289364f",
    "metadata": {},
    "outputs": [
@@ -1512,9 +1512,7 @@
     }
    ],
    "source": [
-    "# Get or create monitoring feature group for CO₂ predictions\n",
-    "# This is a SEPARATE feature group from 'global_co2' - it stores predictions for monitoring\n",
-    "# Using version 3 to avoid conflicts with orphaned tables from versions 1 and 2\n",
+    "# Get or create monitoring feature group for CO2 predictions\n",
     "\n",
     "co2_monitor_fg = fs.get_or_create_feature_group(\n",
     "    name='co2_predictions',\n",
@@ -1543,7 +1541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "bc19776f",
    "metadata": {},
    "outputs": [
@@ -1708,12 +1706,7 @@
     }
    ],
    "source": [
-    "# Retrieve predictions from monitoring feature group (1-month ahead forecasts)\n",
-    "# Note: We filter by days_before_forecast_day == 1 to get only 1-month ahead predictions.\n",
-    "# Since the primary key is ['date', 'days_before_forecast_day'], if we insert a new prediction\n",
-    "# for the same date with days_before_forecast_day == 1, it will replace the old one (upsert).\n",
-    "# However, the forecast only generates predictions for future dates, so backfilled predictions\n",
-    "# for historical dates remain unchanged. This allows us to evaluate predictions over time.\n",
+    "# Retrieve 1-month ahead temperature predictions (days_before_forecast_day == 1)\n",
     "\n",
     "co2_monitor_fg = fs.get_feature_group(\n",
     "    name='co2_predictions',\n",
@@ -1735,7 +1728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "52c5a4e7",
    "metadata": {},
    "outputs": [
@@ -2122,7 +2115,7 @@
     }
    ],
    "source": [
-    "# Retrieve actual CO₂ data\n",
+    "# Retrieve actual CO2 data\n",
     "co2_actual_fg = fs.get_feature_group(name='global_co2', version=1)\n",
     "co2_actual_df = co2_actual_fg.read()\n",
     "co2_actual_df['date'] = pd.to_datetime(co2_actual_df['date'])\n",
@@ -2239,7 +2232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "4ecab718",
    "metadata": {},
    "outputs": [
@@ -2376,21 +2369,8 @@
    ],
    "source": [
     "# Merge predictions with actual values for hindcast evaluation\n",
-    "# \n",
-    "# How this works when new actual data arrives:\n",
-    "# 1. Initially: Backfill creates predictions for last 24 months of historical data\n",
-    "# 2. Each month: Forecast creates predictions for 24 months ahead (future dates only)\n",
-    "# 3. When actual data arrives for a month (e.g., January 2025):\n",
-    "#    - We already have a prediction for that month (made 1 month earlier, e.g., December 2024)\n",
-    "#    - The hindcast merges predictions with actuals, showing a new dot for that month\n",
-    "#    - Backfilled predictions remain unchanged (they're for historical dates)\n",
-    "# 4. The hindcast plot grows over time: each month, a new dot appears showing the comparison\n",
-    "#    for the month that now has actuals\n",
-    "#\n",
-    "# Example timeline:\n",
-    "# - Dec 2024: Hindcast shows Nov 2023 - Nov 2024 (backfilled predictions vs actuals)\n",
-    "# - Jan 2025: Hindcast shows Nov 2023 - Jan 2025 (backfilled + Dec 2024 prediction for Jan 2025 vs actuals)\n",
-    "# - Feb 2025: Hindcast shows Nov 2023 - Feb 2025 (backfilled + Dec 2024 prediction for Jan 2025 + Jan 2025 prediction for Feb 2025 vs actuals)\n",
+    "# This includes both backfilled predictions (historical dates) and forecast predictions (future dates)\n",
+    "# As actual data arrives, both types of predictions will appear in the hindcast graph\n",
     "\n",
     "outcome_df = co2_actual_df[['date', 'average']].rename(columns={'average': 'actual_co2'})\n",
     "preds_df = monitoring_df[['date', 'predicted_co2']]\n",
@@ -2398,9 +2378,14 @@
     "hindcast_df = pd.merge(preds_df, outcome_df, on=\"date\")\n",
     "hindcast_df = hindcast_df.sort_values(by=['date'])\n",
     "\n",
-    "# If there are no outcomes for predictions yet, backfill predictions for monitoring\n",
-    "# This only runs once initially - after that, new predictions come from monthly forecasts\n",
-    "if len(hindcast_df) == 0:\n",
+    "# Backfill only if: (1) no hindcast data exists AND (2) no historical predictions exist\n",
+    "# Check if there are any predictions for past dates (backfill would have created these)\n",
+    "today = datetime.now().date()\n",
+    "has_historical_predictions = len(monitoring_df) > 0 and len(monitoring_df[pd.to_datetime(monitoring_df['date']).dt.date < today]) > 0\n",
+    "\n",
+    "# Only backfill if no hindcast data AND no historical predictions exist\n",
+    "# This ensures backfill only runs once, never replaces existing predictions\n",
+    "if len(hindcast_df) == 0 and not has_historical_predictions:\n",
     "    hindcast_df = backfill_co2_predictions_for_monitoring(\n",
     "        co2_fg, \n",
     "        co2_monitor_fg, \n",
@@ -3156,7 +3141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "44357a54",
    "metadata": {},
    "outputs": [
@@ -3456,8 +3441,6 @@
     ")\n",
     "\n",
     "# Helper function to build residual features from history lists for temperature\n",
-    "# Note: The temperature residual model was trained ONLY on temp_anomaly lag/roll features,\n",
-    "# NOT on trend lag/roll features (unlike CO2 which uses both)\n",
     "def make_temp_residual_features_from_history(temp_anomaly_history, trend_history):\n",
     "    \"\"\"Build residual features from historical temperature anomaly list.\n",
     "    Note: trend_history parameter is unused but kept for consistency with CO2 function signature.\"\"\"\n",
@@ -3499,7 +3482,7 @@
     "    year_month_sin = year_norm * month_sin\n",
     "    year_month_cos = year_norm * month_cos\n",
     "    \n",
-    "    # 1. Predict trend part\n",
+    "    # Predict trend part\n",
     "    trend_row_temp = pd.DataFrame([{\n",
     "        'year_normalized': year_norm,\n",
     "        'year_normalized_squared': year_norm_sq,\n",
@@ -3510,16 +3493,16 @@
     "    }])\n",
     "    trend_pred_temp = float(trend_model_temp.predict(trend_row_temp[trend_features_temp])[0])\n",
     "    \n",
-    "    # 2. Build residual features from historical data\n",
+    "    # Build residual features from historical data\n",
     "    resid_feats_temp = make_temp_residual_features_from_history(historical_temp_anomaly, historical_trend_temp)\n",
     "    \n",
-    "    # 3. Predict residual part\n",
+    "    # Predict residual part\n",
     "    resid_row_df_temp = pd.DataFrame([resid_feats_temp])\n",
     "    # Remove trend features from residual features (they're not used in residual model)\n",
     "    resid_row_df_temp = resid_row_df_temp.drop(columns=[c for c in trend_features_temp if c in resid_row_df_temp.columns])\n",
     "    residual_pred_temp = float(residual_model_gb_temp.predict(resid_row_df_temp)[0])\n",
     "    \n",
-    "    # 4. Combine trend + residual + bias correction\n",
+    "    # Combine trend + residual + bias correction\n",
     "    temp_pred = trend_pred_temp + residual_pred_temp + bias_correction_temp\n",
     "    \n",
     "    predictions_temp.append({\n",
@@ -3843,7 +3826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "1f00ca76",
    "metadata": {},
    "outputs": [
@@ -3858,8 +3841,6 @@
    ],
    "source": [
     "# Get or create monitoring feature group for temperature predictions\n",
-    "# This is a SEPARATE feature group from 'global_temperature' - it stores predictions for monitoring\n",
-    "# Using version 3 to avoid conflicts with orphaned tables from versions 1 and 2\n",
     "\n",
     "temp_monitor_fg = fs.get_or_create_feature_group(\n",
     "    name='temperature_predictions',\n",
@@ -3876,7 +3857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "a8f971a9",
    "metadata": {},
    "outputs": [
@@ -4041,12 +4022,7 @@
     }
    ],
    "source": [
-    "# Retrieve temperature predictions from monitoring feature group (1-month ahead forecasts)\n",
-    "# Note: We filter by days_before_forecast_day == 1 to get only 1-month ahead predictions.\n",
-    "# Since the primary key is ['date', 'days_before_forecast_day'], if we insert a new prediction\n",
-    "# for the same date with days_before_forecast_day == 1, it will replace the old one (upsert).\n",
-    "# However, the forecast only generates predictions for future dates, so backfilled predictions\n",
-    "# for historical dates remain unchanged. This allows us to evaluate predictions over time.\n",
+    "# Retrieve 1-month ahead temperature predictions (days_before_forecast_day == 1)\n",
     "\n",
     "temp_monitor_fg = fs.get_feature_group(\n",
     "    name='temperature_predictions',\n",
@@ -4546,7 +4522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "16614915",
    "metadata": {},
    "outputs": [
@@ -4682,15 +4658,24 @@
     }
    ],
    "source": [
+    "# Merge predictions with actual values for hindcast evaluation\n",
+    "# This includes both backfilled predictions (historical dates) and forecast predictions (future dates)\n",
+    "# As actual data arrives, both types of predictions will appear in the hindcast graph\n",
+    "\n",
     "outcome_df_temp = temp_actual_df[['date', 'temp_anomaly']].rename(columns={'temp_anomaly': 'actual_temp_anomaly'})\n",
     "preds_df_temp = monitoring_df_temp[['date', 'predicted_temp_anomaly']]\n",
     "\n",
     "hindcast_df_temp = pd.merge(preds_df_temp, outcome_df_temp, on=\"date\")\n",
     "hindcast_df_temp = hindcast_df_temp.sort_values(by=['date'])\n",
     "\n",
-    "# If there are no outcomes for predictions yet, backfill predictions for monitoring\n",
-    "# This only runs once initially - after that, new predictions come from monthly forecasts\n",
-    "if len(hindcast_df_temp) == 0:\n",
+    "# Backfill only if: (1) no hindcast data exists AND (2) no historical predictions exist\n",
+    "# Check if there are any predictions for past dates (backfill would have created these)\n",
+    "today = datetime.now().date()\n",
+    "has_historical_predictions_temp = len(monitoring_df_temp) > 0 and len(monitoring_df_temp[pd.to_datetime(monitoring_df_temp['date']).dt.date < today]) > 0\n",
+    "\n",
+    "# Only backfill if no hindcast data AND no historical predictions exist\n",
+    "# This ensures backfill only runs once - never replaces existing predictions\n",
+    "if len(hindcast_df_temp) == 0 and not has_historical_predictions_temp:\n",
     "    hindcast_df_temp = backfill_temp_predictions_for_monitoring(\n",
     "        temp_fg, \n",
     "        temp_monitor_fg, \n",
