--- a/notebooks/feature_backfill.ipynb
+++ b/notebooks/feature_backfill.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "a1427e85",
    "metadata": {},
    "outputs": [
@@ -18,9 +18,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025-12-22 14:31:12,194 INFO: Initializing external client\n",
-      "2025-12-22 14:31:12,194 INFO: Base URL: https://eu-west.cloud.hopsworks.ai:443\n",
-      "2025-12-22 14:31:13,166 INFO: Python Engine initialized.\n",
+      "2025-12-30 16:33:56,775 INFO: Initializing external client\n",
+      "2025-12-30 16:33:56,775 INFO: Base URL: https://eu-west.cloud.hopsworks.ai:443\n",
+      "2025-12-30 16:33:57,644 INFO: Python Engine initialized.\n",
       "\n",
       "Logged in to project, explore it here https://eu-west.cloud.hopsworks.ai:443/p/2177\n"
      ]
@@ -171,7 +171,6 @@
     "\n",
     "# Columns in Mauna Loa file (see header in the NOAA text):\n",
     "# year, month, decimal_date, average, trend, #days, st.dev, unc. of mon mean\n",
-    "# Note: trend_unc is not available in Mauna Loa data, so we don't include it in our feature group\n",
     "co2_df = pd.read_csv(\n",
     "    io.StringIO(raw_text),\n",
     "    delim_whitespace=True,\n",
@@ -195,7 +194,6 @@
     "co2_df = co2_df.dropna(subset=[\"average\"]).copy()\n",
     "\n",
     "# Keep a tidy subset of columns we care about\n",
-    "# Note: trend_unc is not available in Mauna Loa data, so we don't include it\n",
     "co2_df = co2_df[[\"date\", \"average\", \"trend\", \"average_unc\"]].sort_values(\"date\").reset_index(drop=True)\n",
     "\n",
     "co2_df.head()\n"
@@ -206,20 +204,14 @@
    "id": "73edb267",
    "metadata": {},
    "source": [
-    "### Add lag and rolling mean features\n",
+    "### 🛼 Add lag and rolling mean features\n",
     "\n",
-    "We enrich the monthly CO₂ series with simple lag features and rolling means on the `average` series, which the model can later use for forecasting.\n"
+    "We enrich the monthly CO₂ series with simple lag features and rolling means on the average series, which the model can later use for forecasting.\n"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "8e2dee03",
-   "metadata": {},
-   "source": []
-  },
-  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "5ca6b567",
    "metadata": {},
    "outputs": [
@@ -413,13 +405,13 @@
     "# Sort just in case and reset index\n",
     "co2_df = co2_df.sort_values(\"date\").reset_index(drop=True)\n",
     "\n",
-    "# Add lag features for the main target series (average CO₂) and for the trend\n",
+    "# Add lag features for the main target series (average CO2) and for the trend\n",
     "for k in [1, 2, 3, 6, 12]:\n",
     "    co2_df[f\"average_lag_{k}\"] = co2_df[\"average\"].shift(k)\n",
     "    co2_df[f\"trend_lag_{k}\"] = co2_df[\"trend\"].shift(k)\n",
     "\n",
     "# Add rolling means over the average and trend series\n",
-    "# IMPORTANT: shift by 1 so rolling windows use only *past* months (no leakage of current month)\n",
+    "# shift by 1 so rolling windows use only past months (no leakage of current month)\n",
     "shifted_avg = co2_df[\"average\"].shift(1)\n",
     "shifted_trend = co2_df[\"trend\"].shift(1)\n",
     "co2_df[\"average_roll_3\"] = shifted_avg.rolling(window=3).mean()\n",
@@ -431,7 +423,7 @@
     "co2_df = co2_df.dropna().reset_index(drop=True)\n",
     "\n",
     "# Add time-based features for trend modeling\n",
-    "co2_df.head()\n"
+    "co2_df.head()"
    ]
   },
   {
@@ -439,7 +431,7 @@
    "id": "15463420",
    "metadata": {},
    "source": [
-    "### Add time-based features for trend modeling"
+    "### ⏰ Add time-based features for trend modeling"
    ]
   },
   {
@@ -695,7 +687,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025-12-22 14:31:27,866 INFO: Computing insert statistics\n"
+      "Feature Group created successfully, explore it at \n",
+      "https://eu-west.cloud.hopsworks.ai:443/p/2177/fs/2128/fg/3261\n",
+      "2025-12-30 16:34:11,391 INFO: Computing insert statistics\n"
      ]
     },
     {
@@ -737,14 +731,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "8a3cf41a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<hsfs.feature_group.FeatureGroup at 0x310330470>"
+       "<hsfs.feature_group.FeatureGroup at 0x30c0a5760>"
       ]
      },
      "execution_count": 7,
@@ -758,7 +752,6 @@
     "co2_fg.update_feature_description(\"average\", \"Global monthly mean atmospheric CO2 concentration in ppm (parts per million)\")\n",
     "co2_fg.update_feature_description(\"trend\", \"Deseasonalized global monthly mean CO2 concentration in ppm (seasonal cycle removed)\")\n",
     "co2_fg.update_feature_description(\"average_unc\", \"Uncertainty (standard deviation) of the average CO2 measurement in ppm\")\n",
-    "# Note: trend_unc is not included as it's not available in Mauna Loa data\n",
     "\n",
     "# Lag features\n",
     "for k in [1, 2, 3, 6, 12]:\n",
@@ -787,14 +780,14 @@
    "id": "b69d6f2b",
    "metadata": {},
    "source": [
-    "## Fetch NASA GISS Global Monthly Mean Temperature Anomaly 🌡️\n",
+    "## 🌡️ Fetch NASA GISS Global Monthly Mean Temperature Anomaly \n",
     "\n",
-    "We load a **global monthly surface temperature anomaly** time series from a local CSV file and prepare it for feature engineering.\n"
+    "We load a global monthly surface temperature anomaly time series from a local CSV file and prepare it for feature engineering.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "de85085e",
    "metadata": {},
    "outputs": [
@@ -917,14 +910,14 @@
    "id": "39716902",
    "metadata": {},
    "source": [
-    "### Add lag and rolling mean features for Global Temperature\n",
+    "### 🛼 Add lag and rolling mean features for Global Temperature\n",
     "\n",
     "We enrich the global temperature anomaly series with lagged values and rolling means, similar to the CO₂ pipeline.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "be7b72fc",
    "metadata": {},
    "outputs": [
@@ -1124,7 +1117,7 @@
     "    temp_df[f\"temp_anomaly_lag_{k}\"] = temp_df[\"temp_anomaly\"].shift(k)\n",
     "\n",
     "# Add rolling means over the temperature anomaly series\n",
-    "# IMPORTANT: shift by 1 so the rolling window uses only *past* months (no leakage of current month)\n",
+    "# shift by 1 so the rolling window uses only *past* months (no leakage of current month)\n",
     "shifted_temp = temp_df[\"temp_anomaly\"].shift(1)\n",
     "temp_df[\"temp_anomaly_roll_3\"] = shifted_temp.rolling(window=3).mean()\n",
     "temp_df[\"temp_anomaly_roll_12\"] = shifted_temp.rolling(window=12).mean()\n",
@@ -1163,7 +1156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "4f5b3c23",
    "metadata": {},
    "outputs": [
@@ -1171,14 +1164,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025-12-22 14:31:54,577 INFO: \t10 expectation(s) included in expectation_suite. result_format settings filtered.\n",
+      "2025-12-30 16:34:33,997 INFO: \t10 expectation(s) included in expectation_suite. result_format settings filtered.\n",
       "Great Expectations suite built for global_temperature.\n"
      ]
     }
    ],
    "source": [
-    "# Build a Great Expectations suite for the global_temperature feature group\n",
-    "\n",
     "# Build expectations on the engineered temp_df\n",
     "ge_temp_df = ge.from_pandas(temp_df.copy())\n",
     "\n",
@@ -1188,7 +1179,7 @@
     "\n",
     "# Temperature anomaly should be within a reasonable physical range (°C)\n",
     "ge_temp_df.expect_column_values_to_be_between(\n",
-    "    \"temp_anomaly\", min_value=-10, max_value=10\n",
+    "    \"temp_anomaly\", min_value=-20, max_value=20\n",
     ")\n",
     "\n",
     "# Lags and rolling means should be non-null (after dropna in feature engineering)\n",
@@ -1199,9 +1190,7 @@
     "ge_temp_df.expect_column_values_to_not_be_null(\"temp_anomaly_roll_12\")\n",
     "\n",
     "# Export expectation suite so we can attach it when creating the feature group\n",
-    "temperature_expectation_suite = ge_temp_df.get_expectation_suite()\n",
-    "\n",
-    "print(\"Great Expectations suite built for global_temperature.\")"
+    "temperature_expectation_suite = ge_temp_df.get_expectation_suite()"
    ]
   },
   {
@@ -1215,14 +1204,14 @@
      "output_type": "stream",
      "text": [
       "Feature Group created successfully, explore it at \n",
-      "https://eu-west.cloud.hopsworks.ai:443/p/2177/fs/2128/fg/3177\n",
-      "2025-12-22 14:32:07,422 INFO: Computing insert statistics\n"
+      "https://eu-west.cloud.hopsworks.ai:443/p/2177/fs/2128/fg/3262\n",
+      "2025-12-30 16:34:46,391 INFO: Computing insert statistics\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<hsfs.feature_group.FeatureGroup at 0x31084b860>"
+       "<hsfs.feature_group.FeatureGroup at 0x30c462000>"
       ]
      },
      "execution_count": 11,
@@ -1232,7 +1221,6 @@
    ],
    "source": [
     "# Create or get the feature group for global temperature\n",
-    "# Attach the Great Expectations suite we built above\n",
     "temp_fg = fs.get_or_create_feature_group(\n",
     "    name=\"global_temperature\",\n",
     "    version=1,\n",
@@ -1249,14 +1237,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "8dff0127",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<hsfs.feature_group.FeatureGroup at 0x31084b860>"
+       "<hsfs.feature_group.FeatureGroup at 0x30c462000>"
       ]
      },
      "execution_count": 12,
@@ -1266,7 +1254,6 @@
    ],
    "source": [
     "# Add feature descriptions for the global_temperature feature group\n",
-    "\n",
     "temp_fg.update_feature_description(\"date\", \"Date of measurement (first day of each month)\")\n",
     "temp_fg.update_feature_description(\"temp_anomaly\", \"Global monthly mean surface temperature anomaly relative to 1951-1980 (°C)\")\n",
     "\n",
