--- a/notebooks/training_pipeline.ipynb
+++ b/notebooks/training_pipeline.ipynb
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "6d63a7a1",
    "metadata": {},
    "outputs": [],
@@ -141,7 +141,7 @@
     "    'average_lag_12',\n",
     "    'average_roll_3',   # 3-month rolling mean of past averages\n",
     "    'average_roll_12',  # 12-month rolling mean of past averages\n",
-    "    # Historical trend features (these are fine - they're past values)\n",
+    "    # Historical trend features (these are fine, they're past values)\n",
     "    'trend_lag_1',\n",
     "    'trend_lag_2',\n",
     "    'trend_lag_3',\n",
